# webstatusproj

./: .gitignore  README.md  pyproject.toml
ansible/: .gitignore  ansible.cfg  ansible_commands.md  inventory  run_ansible_playbook.py  user_passwords.json.example
ansible/ansparse/: AnsibleParse.py  AnsibleParsePing.py
ansible_runner/: ansible.cfg  ansible_commands.md  ping.yaml
ansible_runner/env/: cmdline  passwords.example
webstatus/: manage.py
webstatus/sched_tasks/: apps.py  tasks.py
webstatus/sched_tasks/management/commands/: runapscheduler.py
webstatus/scheduler/: tasks.py
webstatus/scheduler/management/commands/: runapscheduler.py
webstatus/webstatus/: asgi.py  settings.py  urls.py  wsgi.py
