[tool.poetry]
name = "webstatusproj"
version = "0.1.0"
description = "webstatusproj"
authors = ["Your Name <36602061+einwolf@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
djangorestframework = "^3.14.0"
ansible-runner = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
