[tool.poetry]
name = "webstatusproj"
version = "0.1.0"
description = "webstatus project"
authors = ["einwolf <36602061+einwolf@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "webstatus"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
djangorestframework = "^3.14.0"
ansible-runner = "^2.2.1"
django-debug-toolbar = "^3.7.0"
dramatiq = "^1.13.0"
django-dramatiq = "^0.11.2"
django-webpack-loader = "^1.7.0"
psycopg2-binary = "^2.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
